--- a/web/game_parking.html
+++ b/web/game_parking.html
@@ -111,8 +111,6 @@
     </section>
 
     <script type="application/dart" src="game_parking.dart"></script>
-    <script
-    src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js">
-    </script>
+    <script src="packages/browser/dart.js"></script>
   </body>
 </html>
