update pubspec.yaml (update to dartling 2.0.0 on GitHub)

--- a/web/game_parking.html
+++ b/web/game_parking.html
@@ -77,7 +77,7 @@
     <section id="side">
       <p>
         <span class="drop">A</span> game in
-        <a  href="http://www.dartlang.org/" class="link">
+        <a  href="https://www.dartlang.org/" class="link">
           Dart
         </a>
         with a model based on the
